--- a/thesis.tex
+++ b/thesis.tex
@@ -148,7 +148,7 @@
 \input{H4_InitialDifficulties}
 \input{H5_RMaccelerated}
 \input{H6_implementation}
-\input{H7_results}
+%\input{H7_results}
 \input{H8_conclusions}
 
 
